Thu Sep 26 16:51:00 2013  Shota Fukumori  <her@sorah.jp>

	* insns.def (opt_regexpmatch2): Check String#=~ hasn't overridden
	  before calling rb_reg_match().

	* test/ruby/test_string.rb: Test for above.

	* vm.c (vm_init_redefined_flag): Add BOP flag for String#=~

	[ruby-core:57385] [Bug #8953]

Thu Sep 26 16:43:42 2013  Akinori MUSHA  <knu@iDaemons.org>

	* misc/ruby-electric.el: Avoid use of the interactive function
	  `self-insert-command` which fires `post-self-insert-hook` and
	  `post-command-hook`, to make the ruby-electric commands work
	  nicely with those minor modes that make use of them to do
	  similar input assistance, such as electric-pair-mode,
	  autopair-mode and smartparens-mode.

Thu Sep 26 16:24:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* insns.def (opt_regexpmatch1): check Regexp#=~ is not defined before
	  calling rb_reg_match()

	* test/ruby/test_regexp.rb: add test

	* vm.c (ruby_vm_redefined_flag): change type to short[]

	* vm.c (vm_redefinition_check_flag): return REGEXP_REDEFINED_OP_FLAG if
	  klass == rb_cRegexp

	* vm.c (vm_init_redefined_flag): setup BOP flag for Regexp#=~

	* vm_insnhelper.h: add REGEXP_REDEFINED_OP_FLAG

	[ruby-core:57385] [Bug #8953]

Thu Sep 26 14:46:49 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (mark_locations_array): disable AddressSanitizer.  based on a
	  patch by halfie (Ruby Guy) at [ruby-core:57372].
	  [ruby-core:56155] [Bug #8680]

Wed Sep 25 17:41:29 2013  Koichi Sasada  <ko1@atdot.net>

	* README.EXT, README.EXT.ja: remove description of RARRAY_PTR()
	  and add a caution of accessing internal data structure directly.
	  Also add a description of rb_ary_store().
	  [Bug #8399]

Wed Sep 25 17:12:08 2013  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/ruby.h: rename RARRAY_RAWPTR() to RARRAY_CONST_PTR().
	  RARRAY_RAWPTR(ary) returns (const VALUE *) type pointer and
	  usecase of this macro is not acquire raw pointer, but acquire