@@ -1,3 +1,14 @@
+Thu Sep 26 21:07:49 2013  Akinori MUSHA  <knu@iDaemons.org>
+
+	* misc/ruby-electric.el (ruby-electric-delete-backward-char): Add
+	  support for smartparen-mode.
+
+	* misc/ruby-electric.el (ruby-electric-cua-replace-region-maybe)
+	  (ruby-electric-cua-delete-region-maybe): New functions that
+	  combine `ruby-electric-cua-*-region` with
+	  `ruby-electric-cua-*-region-p`, using a slightly better way to
+	  detect if it is in cua-mode.
+
 Thu Sep 26 16:51:00 2013  Shota Fukumori  <her@sorah.jp>
 
 	* insns.def (opt_regexpmatch2): Check String#=~ hasn't overridden
